--- a/class/js/basic/_01_variable.html
+++ b/class/js/basic/_01_variable.html
@@ -1,64 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title></title>
-    <script>
+  <meta charset="UTF-8">
+  <title></title>
 
-        // 변수 선언 예제
-        var a = 10;
+  <script>
+    // 변수 선언 예제
+    var a = 10;
 
-        var b;
-        b=20;
+    var b;
 
-//        alert(a);
-//        alert(b);
+    b = 20;
 
-        document.write('<p>');
-        document.write(a);
-        document.write(b);
-        document.write('</p>');
+    alert(a);
+    alert(b);
 
-        console.log(a);
-        console.log(b);
+    document.write('<p>');
+    document.write(a);
+    document.write(b);
+    document.write('</p>');
 
-        // 변수값 저장 예제
-        var data1 = 100;
-        var data2 = data1 + 200;
+    console.log(a);
+    console.log(b);
 
-        document.write('<p>');
-        document.write(data1);
-        document.write(data2);
-        document.write('</p>');
+    // 변수값 저장 예제
+    var data1 = 100;
+    var data2 = data1 + 200;
 
-        // 변수 이름 지정 방법
-        var gnbDepthLink = 'Depth 1';
-        document.write('<p>');
-        document.write(gnbDepthLink);
-        document.write('</p>');
+    document.write('<p>');
+    document.write(data1);
+    document.write(data2);
+    document.write('</p>');
 
-        // 배열 변수 선언
-        var a = [1,2,3];
-        document.write('<p>');
-        document.write(a[0]);
-        document.write(a[1]);
-        document.write(a[2]);
-        document.write('</p>');
+    // 변수 이름 지정 방법 - Camel Case
+    var gnbDepthLink = 'Depth 1';
 
-        var b = [];
+    document.write('<p>');
+    document.write(gnbDepthLink);
+    document.write('</p>');
 
-        b[0] = 10;
-        b[1] = 20;
-        b[2] = 30;
+    // 배열 변수 선언 방법 1
+    var arr = [1,2,3];
 
-        document.write('<p>');
-        document.write(b[0]);
-        document.write(b[1]);
-        document.write(b[2]);
-        document.write('</p>');
+    document.write('<p>');
+    document.write(arr[0]);
+    document.write(arr[1]);
+    document.write(arr[2]);
+    document.write('</p>');
 
+    // 배열 변수 선언 방법 2
+    var arr2 = [];
 
-    </script>
+    arr2[0] = 10;
+    arr2[1] = 20;
+    arr2[2] = 30;
+
+    document.write('<p>');
+    document.write(arr2[0]);
+    document.write(arr2[1]);
+    document.write(arr2[2]);
+    document.write('</p>');
+  </script>
+
 </head>
 <body>
 
