--- a/class/js/basic/_08_bom.html
+++ b/class/js/basic/_08_bom.html
@@ -5,7 +5,7 @@
     <title></title>
 
     <script>
-        // console.log(window);
+        console.log(window);
 
         // 새창 띄우기
         // window.open();
