--- a/class/js/basic/_11-10_find.html
+++ b/class/js/basic/_11-10_find.html
@@ -26,8 +26,8 @@
 
         $(document).ready(function() {
             // 실행 코드
-            // filter 함수 - ul.menu li 중에 클래스 이름이 select 인 노드를 찾아 border 속성을 변경
-            $('ul.menu li').filter('.select').css('border', '4px solid #f00');
+            // find 함수 - div 태그 중 클래스가 content-data 인 노드의 border 속성 변경
+            $('#content').find('.test1').css('border', '4px solid #f00');
         });
 
     </script>
@@ -39,7 +39,7 @@
     <div id="header">
         헤더 영역(div, id=header)
     </div>
-    <div id="content" class="sample-content">
+    <div id="content" class="sample-content test1">
         노드 찾기(div, id=content, class=sample-content)
         <ul class="menu">
             일반 노드 찾기(ul, class=menu)
