--- a/class/js/basic/_11-4_handling_node_length.html
+++ b/class/js/basic/_11-4_handling_node_length.html
@@ -26,6 +26,8 @@
 
         $(document).ready(function() {
             // 실행 코드
+            // div 태그 노드의 개수
+            console.log( $('div').length );
         });
 
     </script>
