--- a/class/js/basic/_11-5_handling_node_nth_node.html
+++ b/class/js/basic/_11-5_handling_node_nth_node.html
@@ -26,8 +26,8 @@
 
         $(document).ready(function() {
             // 실행 코드
-            // div 태그 노드의 개수
-            console.log( $('div').length );
+            // ul.menu 노드중 2번째 메뉴 노드의 border 속성 변경
+            $('ul.menu li').eq(1).css('border', '4px solid #f00');
         });
 
     </script>
