--- a/class/js/basic/_11-8_this.html
+++ b/class/js/basic/_11-8_this.html
@@ -26,9 +26,13 @@
 
         $(document).ready(function() {
             // 실행 코드
-            // 순차적 노드 접근
+            // this 와 $(this) 비교
             $('ul.menu li').each(function(index){
-                $('ul.menu li').eq(index).css('border', '4px solid #' + ( '' + ( 321 + 100 * index ) ) );
+                console.log( this );
+            });
+
+            $('ul.menu li').each(function(index){
+                console.log( $(this) );
             });
 
 
