--- a/class/js/basic/_11-11_index.html
+++ b/class/js/basic/_11-11_index.html
@@ -26,8 +26,8 @@
 
         $(document).ready(function() {
             // 실행 코드
-            // find 함수 - div 태그 중 클래스가 content-data 인 노드의 border 속성 변경
-            $('#content').find('.test1').css('border', '4px solid #f00');
+            // index
+            console.log( $('ul.menu li').index( $('.select') ) );
         });
 
     </script>
