--- a/class/js/basic/_11-7_handle_iterate_node.html
+++ b/class/js/basic/_11-7_handle_iterate_node.html
@@ -26,12 +26,10 @@
 
         $(document).ready(function() {
             // 실행 코드
-            // jquery DOM에서 javascript DOM 직접 접근
-
-            $('ul.menu li').eq(0).css('border', '4px solid #f00');
-
-
-            $('ul.menu li').get(3).style.border = '4px solid #f00';
+            // 순차적 노드 접근
+            $('ul.menu li').each(function(index){
+                $('ul.menu li').eq(index).css('border', '4px solid #' + ( '' + ( 321 + 100 * index ) ) );
+            });
 
 
         });
