--- a/class/webpage/dothome.html
+++ b/class/webpage/dothome.html
@@ -11,11 +11,16 @@
     $(function(){
 
       $('.gnb-depth1-item').on('mouseenter', function(){
-        $(this).children('.gnb-depth2').css('display', 'block');
+//        $(this).children('.gnb-depth2').css('display', 'block');
+
+        $(this).children('.gnb-depth2').addClass('on');
       });
 
       $('.gnb-depth1-item').on('mouseleave', function(){
-        $(this).children('.gnb-depth2').css('display', 'none');
+//        $(this).children('.gnb-depth2').css('display', 'none');
+
+
+        $(this).children('.gnb-depth2').removeClass('on');
       });
 
     });
