--- a/class/js/basic/_13-1_css_value.html
+++ b/class/js/basic/_13-1_css_value.html
@@ -20,10 +20,12 @@
         }
     </style>
 
-    <script type="text/javascript"  src="../../libs/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript"  src="../lib/jquery-3.1.1.js"></script>
     <script>
 
-
+        $(document).ready(function(){
+            console.log( $('ul.menu').css(['width', 'height']) );
+        });
 
     </script>
 </head>
