--- a/class/js/image_animation/image_animation_03.html
+++ b/class/js/image_animation/image_animation_03.html
@@ -21,7 +21,7 @@
 
             background:url(./sprite/sprite_car.png) no-repeat;
 
-            background-position:0px 0px;
+            background-position:0 0;
         }
 
         .btn-wrap{
@@ -40,7 +40,24 @@
 
         $(document).ready(function(){
 
+            var i=0;
+            var pos;
 
+            setInterval(function(){
+
+                if( i >= 60 ){
+                    i=0;
+                }
+
+                pos = i * -425;
+
+                $('.image-wrap').css({
+                    'background-position' : '0 ' + pos + 'px'
+                });
+
+                i++;
+
+            }, 33)
 
         });
 
