--- a/class/webpage/baskinrabins.html
+++ b/class/webpage/baskinrabins.html
@@ -17,11 +17,11 @@
 
     <div class="small-wrap">
 
-      <h1 class="logo">
+      <h2 class="logo">
         <a href="/">
           <img src="images/logo_baskinrobbins.png" alt="베스킨라빈스 로고"/>
         </a>
-      </h1>
+      </h2>
 
       <ul class="util-sns">
         <li class="util-sns-item">
@@ -64,6 +64,7 @@
   <div class="nav-wrap">
 
     <nav class="nav">
+      <h2 style="display:none">베스킨라빈스 메인메뉴</h2>
       <div class="small-wrap">
 
         <ul class="nav-member">
@@ -148,7 +149,7 @@
 
     <section class="br-event">
       <div class="small-wrap">
-        <h2 class="br-event-heading">BR EVENT</h2>
+        <h1 class="br-event-heading">BR EVENT</h1>
 
         <ul class="event-list">
 
